# mlops_bobs

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
dashboard/: Dockerfile  streamlit_dashboard.py
dashboard/utils/: dvc_utils.py  func.py  minio_utils.py  streamlit_utils.py
dvc/: Dockerfile
dvc/.dvc/: config
dvc/.dvc/tmp/: lock
minio-data/.minio.sys/: format.json
minio-data/.minio.sys/tmp/.trash/: 59494eb0-faa8-46a4-9826-edb994d49d01  7a62a8ca-0906-4927-b37c-3d28403797f8  99196c43-7efc-4731-bff1-f2f7a524e60b
minio-data/.minio.sys/tmp/.trash/026b40e8-6f39-429c-804c-197fa04612f1/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/04827fd5-7c0b-41a3-ae9f-da51393afb6a/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/067064cc-31f0-4adc-8d6b-e8838747cff5/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/12330e43-7986-4f90-9480-66faeb490c02/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/19b3da5e-96de-4511-a9a0-dc0b44d18fbe/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/2ada0289-371f-4be2-94fd-307286e5b605/: xl.meta.bkp
minio-data/.minio.sys/tmp/.trash/37a3a025-9dab-40e0-aeac-bcfdc8aa50c4/: part.1
mlops_bobs/api/grpc/proto/: grpc_client.py  grpc_server.py  service_pb2.py
mlops_bobs/api/rest/: app.py  routes.py  schemas.py
mlops_bobs/core/: model_implementations.py  models.py
proto/: grpc_server.py  service.proto  service_pb2_grpc.py
sample_data/: predict_data.csv  test_data.csv  train_data.csv
scripts/: dvc-init.sh  minio-bucket-init.sh  start_rest.py  test_api.py
(+32 files in other folders)
